--- a/gibbons.html
+++ b/gibbons.html
@@ -165,24 +165,24 @@ theory and practice of library and information science and
 technical expertise.
 LIS Program Objectives
 The M.S.L.I.S. program develops graduates who:
-1 1 Are skilled in organizing, disseminating, managing and
+ 1 Are skilled in organizing, disseminating, managing and
 preserving information;
-2 2 Are skilled in the use of information technologies and
+ 2 Are skilled in the use of information technologies and
 articulate the role of information technology in facilitating
 information management;
-3 3 Demonstrate a commitment to the philosophy,
+ 3 Demonstrate a commitment to the philosophy,
 principles and legal and ethical responsibilities of the field;
-4 4 Are capable of serving information seekers in a global
+ 4 Are capable of serving information seekers in a global
 society;
-5 5 Appreciate education and service as integral to the role
+ 5 Appreciate education and service as integral to the role
 of the information professional in society;
-6 6 Interpret and apply research results from library and
+ 6 Interpret and apply research results from library and
 information science and related fields;
-6 6 Interpret and apply research results from library and
+ 6 Interpret and apply research results from library and
 information science and related fields;
-7 7 Articulate the economic, political, cultural and social
+ 7 Articulate the economic, political, cultural and social
 importance of the information profession;
-8 8 Are dedicated to professional growth, continuous
+ 8 Are dedicated to professional growth, continuous
 learning and applying new knowledge to improve information
 systems and services to meet the needs of information users in
 society.
