Add vision and mission statement to header

--- a/gibbons.index.html
+++ b/gibbons.index.html
@@ -38,6 +38,7 @@
 <body>
     <header>
         <h1>Department of Library and Information Science</h1>
+            Vision and Mission of CUA LIS
         <p><a href="http://lis.cua.edu/about/" target="_blank">CUA LIS Department</a></p>
     </header>
 
